# voicechat-server

./: .gitignore  CMakeLists.txt  ascent_opcodes.h  ascent_socket.c  configfile.c  launcher.c  log.c  network_handlers.h  voice_channel.c  voice_channel.h  voice_socket.c  voicechat-server.conf.dist.in  voicechat-server.rc
.github/workflows/: cmake-multi-platform.yml
